@@ -314,9 +314,13 @@ machine_load_rom_bank( memory_page* bank_map, size_t which, int page_num,
                        const char *filename, const char *fallback,
                        size_t expected_length )
 {
-  int custom = strcmp( filename, fallback );
-  int retval = machine_load_rom_bank_internal( bank_map, which, page_num,
-                                               filename, expected_length, custom );
+  int custom = 0;
+  int retval;
+
+  if( fallback ) custom = strcmp( filename, fallback );
+
+  retval = machine_load_rom_bank_internal( bank_map, which, page_num,
+                                           filename, expected_length, custom );
   if( retval && fallback )
     retval = machine_load_rom_bank_internal( bank_map, which, page_num,
                                              fallback, expected_length, 0 );
